// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForemanRhCloud selectors should return ForemanInventoryUpload 1`] = `
Object {
  "inventoryChild": Object {},
}
`;

exports[`ForemanRhCloud selectors should return ForemanRhCloud 1`] = `
Object {
  "InsightsCloudSync": Object {
    "insightsChild": Object {},
  },
  "hostInsights": Object {},
  "inventoryUpload": Object {
    "inventoryChild": Object {},
  },
}
`;

exports[`ForemanRhCloud selectors should return InsightsCloudSync 1`] = `
Object {
  "insightsChild": Object {},
}
`;
